syntax = "proto3";

option java_multiple_files = true;
option java_package = "chigirh.app.todo.be.sample.grpc.model";

package todoapi.todo;

import "google/protobuf/timestamp.proto";

import "common/common.proto";

message ParentTodo{
  string todo_id = 1;
  TodoDetail detail = 2;
  common.Version version = 3;
  repeated ChildTodo children = 4;
}

message ChildTodo{
  string todo_id = 1;
  TodoDetail detail = 2;
  common.Version version = 3;
  string parent_todo_id = 4;
}

message TodoDetail{
  string todo_name = 1;
  bool is_finished = 2;
  google.protobuf.Timestamp limit_date = 3;
  google.protobuf.Timestamp finish_date = 4;
}

enum TodoType{
  PARENT = 0;
  CHILD = 1;
}